--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_mapa">Map</string>
+
+    <string-array name="zonas">
+        <item>Seleccione zona</item>
+        <item>Zona 1</item>
+        <item>Zona 2</item>
+        <item>Zona 3</item>
+    </string-array>
 </resources>
