--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,9 @@
 
     <string-array name="zonas">
         <item>Seleccione zona</item>
-        <item>Zona 1</item>
-        <item>Zona 2</item>
-        <item>Zona 3</item>
+        <item>Zona A</item>
+        <item>Zona B</item>
+        <item>Zona C</item>
+        <item>Zona D</item>
     </string-array>
 </resources>
